--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-jsx.min.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-elixir.min.js"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-c.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-haskell.min.js"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-cpp.min.js"></script>
   <script src="./dist/bundle.js"></script>
 </body>
